# diversions

./: .clangd  .gitignore  readme.md  resources.md
2015/: CMakeLists.txt  day_one.cpp  day_three.cpp  day_two.cpp
2015/days/: 20151205.cpp  20151206.cpp  20151207.cpp  20151212.cpp  20151215.cpp
2016/: CMakeLists.txt
2016/days/: 20161207.cpp  20161208.cpp  20161209.cpp  20161211.cpp  20161213.cpp  20161214.cpp  20161216.cpp  20161217.cpp  20161219.cpp
2017/: CMakeLists.txt
advent/: resources.md
advent/2015/days/: 20151202.cpp  20151209.cpp  20151211.cpp  20151220.cpp  20151224.cpp  20151225.cpp
advent/2016/days/: 20161201.cpp  20161202.cpp  20161204.cpp  20161205.cpp  20161206.cpp  20161210.cpp  20161212.cpp  20161215.cpp  20161218.cpp  20161220.cpp  20161221.cpp  20161222.cpp  20161223.cpp  20161224.cpp  20161225.cpp
advent/2017/days/: 20171202.cpp
advent/advent_lib/: CMakeLists.txt
advent/advent_lib/cmake/: installing.cmake
advent/advent_lib/graph/: tsp_hk.cpp
advent/advent_lib/include/: graph.hpp  strings.hpp
advent/advent_lib/src/: combinatorics.cpp
advent_lib/: CMakeLists.txt
advent_lib/include/: combinatorics.hpp  graph.hpp  location.hpp  strings.hpp
advent_lib/src/: strings.cpp
euler/: 0001.cpp  10001st_prime.cpp  1000_digit_fibonacci.cpp  CMakeLists.txt  coin_sums.cpp  even_fibonacci_numbers.cpp  factorial_digit_sum.cpp  highly_divisible_triangular_number.cpp  large_sum.cpp  largest_palindrome_product.cpp  largest_prime_factor.cpp  largest_product_in_a_grid.cpp  largest_product_in_a_series.cpp  longest-collatz-sequence.cpp  maximum-path-sum-1.cpp  maximum-path-sum.cpp  multiples_of_three_or_five.cpp  name_scores.cpp  smallest_multiple.cpp  special_pythagorean_triplet.cpp  sum_square_difference.cpp  summation_of_primes.cpp
euler/src/: CMakeLists.txt  main.cpp
euler/src/problems/: CMakeLists.txt  amicable_numbers.cpp  champernownes_constant.cpp  circular_primes.cpp  coded_triangle_numbers.cpp  coin_sums.cpp  consecutive_prime_sum.cpp  counting_sundays.cpp  digit_cancelling_fractions.cpp  digit_factorials.cpp  digit_fifth_powers.cpp  distinct_powers.cpp  distinct_primes_factors.cpp  double_base_palindromes.cpp  even_fibonacci_numbers.cpp  factorial_digit_sum.cpp  goldbachs_other_conjecture.cpp  highly_divisible_triangular_number.cpp  integer_right_triangles.cpp  ith_prime.cpp  large_fibonacci.cpp  large_sum.cpp  largest_palindrome_product.cpp  largest_prime_factor.cpp  largest_product_in_a_grid.cpp  largest_product_in_a_series.cpp  lattice_paths.cpp  lexicographic_permutations.cpp  longest_collatz_sequence.cpp  maximum_path_sum.cpp  multiples_of_three_or_five.cpp  name_scores.cpp  non_abundant_sums.cpp  number_letter_counts.cpp  number_spiral_diagonals.cpp  pandigital_multiples.cpp  pandigital_prime.cpp  pandigital_products.cpp  pentagon_numbers.cpp  power_digit_sum.cpp  (+13 more)
euler/src/utils/: CMakeLists.txt  display.hpp  niche.hpp  utils.hpp
lib/: combinatorics.hpp  strings.hpp
sea/libs/bigint/: CMakeHek.txt  CMakeLists.txt
sea/libs/bigint/cmake/: installation.cmake
sea/libs/bigint/include/: BigInt.hpp
sea/libs/bigint/src/: comparisons.cpp  convenience.cpp  conversion.cpp  int.cpp  operators.cpp
sea/libs/bigint/tests/: tests.cpp
twenty_fifteen/: CMakeLists.txt  vcpkg.json
twenty_fifteen/days/: day_eight.cpp  day_eighteen.cpp  day_fifteen.cpp  day_five.cpp  day_fourteen.cpp  day_nine.cpp  day_nineteen.cpp  day_seventeen.cpp  day_six.cpp  day_sixteen.cpp  day_ten.cpp  day_thirteen.cpp  day_three.cpp  day_twenty.cpp  day_twentyone.cpp  day_twentythree.cpp  day_twentytwo.cpp
twenty_fifteen/days/day_four/: day_four.cpp
twenty_fifteen/days/day_three/: CMakeLists.txt  day_three.cpp
twenty_fifteen/days/day_two/: day_two.cpp
twenty_sixteen/: CMakeLists.txt
twenty_sixteen/days/: day_one.cpp  day_three.cpp
